--- a/css/exapme.css
+++ b/css/exapme.css
@@ -2,6 +2,9 @@
 body {
     margin: 0;
     font-family: Montserrat, sans-serif;
+	    line-height: 1.6;
+    scroll-behavior: smooth;
+	
 }
 
 nav {
@@ -58,6 +61,7 @@ nav ul li a:hover {
     nav label.logo {
         font-size: 25px;
         line-height: 70px;
+	    padding: 0 20px;
     }
 
     nav ul {
@@ -158,8 +162,8 @@ nav ul li a:hover {
 
 
 .social-icons{
-	padding:30px;
-	background-color:#00506b;
+	padding:5px;
+	
   text-align: center;
 }
 .social-icons a{
@@ -353,12 +357,18 @@ p{
     display: flex;
     justify-content: center;
     align-items: center;
-	padding-left:10px;
+	
 
 }
 
-html{
-    scroll-behavior: smooth;
-    scroll-padding-top: 1px;
+footer {
+    background-color: #00506b;
+    text-align: center;
+    padding: 20px;
+    position: relative;
+    bottom: 0;
+    width: 100%;
+    color: white;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
