--- a/css/exapme.css
+++ b/css/exapme.css
@@ -281,7 +281,7 @@ p{
 
 
 #section1{
-    height: 400px;
+    height: 400vh;
     background-color:#9b9b9b;
     border-radius: none;
     width: auto;
